Proyect update: corrected code, added comments, initial GUI implemented